frontend/test/should_fail/graphof_missing_declaration_in_model.grg
#using "graphof_fail_model.gm"

rule r() {
	n:N -e:E-> n;
	if{ graphof(n) != graphof(e); }
---
	
	modify {
	}
}
